#11 [styles] add overflow hidden to prevent displaying out of the block

--- a/src/components/label/label.css
+++ b/src/components/label/label.css
@@ -1,7 +1,12 @@
+.label {
+    border-radius: 4px;
+    overflow: hidden;
+}
+
 .labels {
     position: relative;
     display: flex;
-    border-radius: 6px;
+    border-radius: 5px;
     flex-direction: column;
     border: 1px solid black;
     margin: 10px;
