--- a/src/components/text-area/text-area.css
+++ b/src/components/text-area/text-area.css
@@ -1,5 +1,6 @@
 .editable-block {
     width: 100%;
+    min-width: 180px;
     max-width: 270px;
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
@@ -7,6 +8,9 @@
         'Helvetica Neue', sans-serif;
     font-size: 16px;
     padding-left: 4px;
+    display: block;
+    outline: none;
+    border: 0;
 }
 
 .editable-block_hidden {
